# python-fastapi-template

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  run.py
app/: main.py
app/routes/: api.py
app/templates/: base.html  home.html
src/app/: app.py  main.py
src/app/routes/: api.py
src/app/static/css/: style.css
src/app/templates/: index.html
tests/: test_app.py
