[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "Minimum FastAPI Application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "click>=8.1.3",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.272",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
